--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 					</section>
 
 					<section>
+						<p>web.burza projects</p>
+						<img src="/images/cool-emme.png" />
+					</section>
+
+					<section>
 						<p>25% of customers leave within 4 seconds, &gt; 50% after 8 seconds if waiting</p>
 						<img src="/images/bounceRate.png" />
 					</section>
