--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					</section>
 
 					<section>
-						<p>Wireless latency</p>
+						<p><del>Wireless</del> Radio latency</p>
 						<img src="/images/latency-wireless.png" />
 					</section>
 
