--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<section>
 					<section>
 						<p>Web performance in one slide...</p>
-						<img src="/images/start.png" />
+						<img src="images/start.png" />
 					</section>
 					<section><h1>Thanks. Questions?</h1></section>
 				</section>
@@ -62,27 +62,27 @@
 
 					<section>
 						<p style="font-size: 30px;">Smartphones dominate retail traffic, doubling in one year.</p>
-						<img src="/images/mobileVSdesktop.png" />
+						<img src="images/mobileVSdesktop.png" />
 					</section>
 
 					<section>
 						<p>web.burza projects</p>
-						<img src="/images/cool-emme.png" />
+						<img src="images/cool-emme.png" />
 					</section>
 
 					<section>
 						<p>25% of customers leave within 4 seconds, &gt; 50% after 8 seconds if waiting</p>
-						<img src="/images/bounceRate.png" />
+						<img src="images/bounceRate.png" />
 					</section>
 
 					<section>
 						<p>One second faster = 27% increase in conversions</p>
-						<img src="/images/conversions.png" />
+						<img src="images/conversions.png" />
 					</section>
 
 					<section>
 						<p>Website response time</p>
-						<img src="/images/responseTime.jpg" />
+						<img src="images/responseTime.jpg" />
 					</section>
 
 					<section>
@@ -91,27 +91,27 @@
 
 					<section>
 						<p>Components of an HTTP request</p>
-						<img src="/images/http.png" />
+						<img src="images/http.png" />
 					</section>
 
 					<section>
 						<p>Latency</p>
-						<img src="/images/latency.png" />
+						<img src="images/latency.png" />
 					</section>
 
 					<section>
 						<p>Wire latency</p>
-						<img src="/images/latency-wire.png" />
+						<img src="images/latency-wire.png" />
 					</section>
 
 					<section>
 						<p><del>Wireless</del> Radio latency</p>
-						<img src="/images/latency-wireless.png" />
+						<img src="images/latency-wireless.png" />
 					</section>
 
 					<section>
 						<p>More Bandwidth Doesn’t Matter (Much)</p>
-						<img src="/images/latencyVSbandwidth.png" />
+						<img src="images/latencyVSbandwidth.png" />
 					</section>
 
 				</section>
@@ -120,52 +120,52 @@
 
 					<section>
 						<h2>The critical rendering path</h2>
-						<img src="/images/crp.png" />
+						<img src="images/crp.png" />
 					</section>
 
 					<section>
 						<p>Let's try a simple example...</p>
-						<img src="/images/crp1.png" />
+						<img src="images/crp1.png" />
 					</section>
 
 					<section>
 						<p>HTML bytes are arriving on the wire...</p>
-						<img src="/images/crp2.png" />
+						<img src="images/crp2.png" />
 					</section>
 
 					<section>
 						<p>The HTML5 parser at work...</p>
-						<img src="/images/crp3.png" />
+						<img src="images/crp3.png" />
 					</section>
 
 					<section>
 						<p>DOM construction is complete... waiting on CSS!</p>
-						<img src="/images/crp4.png" />
+						<img src="images/crp4.png" />
 					</section>
 
 					<section>
 						<p>First CSS bytes arrive... still waiting on CSS!</p>
-						<img src="/images/crp5.png" />
+						<img src="images/crp5.png" />
 					</section>
 
 					<section>
 						<p>Finally, we can construct the CSSOM!</p>
-						<img src="/images/crp6.png" />
+						<img src="images/crp6.png" />
 					</section>
 
 					<section>
 						<p>DOM + CSSOM = Render Tree(s)</p>
-						<img src="/images/crp7.png" />
+						<img src="images/crp7.png" />
 					</section>
 
 					<section>
 						<p>DOM + CSSOM = Render Tree(s)</p>
-						<img src="/images/crp8.png" />
+						<img src="images/crp8.png" />
 					</section>
 
 					<section>
 						<p>Layout &amp; paint</p>
-						<img src="/images/crp9.png" />
+						<img src="images/crp9.png" />
 					</section>
 
 					<section>
@@ -174,7 +174,7 @@
 
 					<section>
 						<p>JavaScript... our friend and foe.</p>
-						<img src="/images/crp10.png" />
+						<img src="images/crp10.png" />
 					</section>
 
 				</section>
@@ -189,12 +189,12 @@
 
 					<section>
 						<h3>Synchronous</h3>
-						<img src="/images/js-sync.png" />
+						<img src="images/js-sync.png" />
 					</section>
 
 					<section>
 						<h3>Asynchronous</h3>
-						<img src="/images/js-async.png" />
+						<img src="images/js-async.png" />
 					</section>
 
 					<section>
@@ -203,17 +203,17 @@
 
 					<section>
 						<h3>What’s in your critical CSS?</h3>
-						<img src="/images/criticalCSS.png" />
+						<img src="images/criticalCSS.png" />
 					</section>
 
 					<section>
 						<h3>Before</h3>
-						<img src="/images/html1.png" />
+						<img src="images/html1.png" />
 					</section>
 
 					<section>
 						<h3>After</h3>
-						<img src="/images/html2.png" />
+						<img src="images/html2.png" />
 					</section>
 
 					<section>
@@ -221,7 +221,7 @@
 					</section>
 
 					<section>
-						<img src="/images/lazyLoading.png" />
+						<img src="images/lazyLoading.png" />
 					</section>
 
 					<section>
@@ -229,7 +229,7 @@
 					</section>
 
 					<section>
-						<img src="/images/rwdImages.png" />
+						<img src="images/rwdImages.png" />
 					</section>
 
 					<section>
