--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 				<section>
 					<h1 style="font-size: 3em">Page speed optimization</h1>
 					<h3>Rendering the critical path</h3>
+					<p>Neven Đuranec, frontend developer @ <a href="http://web.burza.hr/">web.burza</a></p>
+					<p><a href="https://twitter.com/nevenduranec">@nevenduranec</a></p>
 				</section>
 
 				<section>
@@ -62,7 +64,8 @@
 
 					<section>
 						<p style="font-size: 30px;">Smartphones dominate retail traffic, doubling in one year.</p>
-						<img src="images/mobileVSdesktop.png" />
+						<img src="images/mobileVSdesktop.png" style="max-width: 80%"/>
+						<p><a href="https://goo.gl/MBIkyJ">goo.gl/MBIkyJ</a></p>
 					</section>
 
 					<section>
@@ -73,16 +76,19 @@
 					<section>
 						<p>25% of customers leave within 4 seconds, &gt; 50% after 8 seconds if waiting</p>
 						<img src="images/bounceRate.png" />
+						<p><a href="https://goo.gl/qEcjDu">goo.gl/qEcjDu</a></p>
 					</section>
 
 					<section>
 						<p>One second faster = 27% increase in conversions</p>
 						<img src="images/conversions.png" />
+						<p><a href="https://goo.gl/qEcjDu">goo.gl/qEcjDu</a></p>
 					</section>
 
 					<section>
 						<p>Website response time</p>
 						<img src="images/responseTime.jpg" />
+						<p><a href="https://goo.gl/PuYB9">goo.gl/PuYB9</a></p>
 					</section>
 
 					<section>
@@ -112,6 +118,7 @@
 					<section>
 						<p>More Bandwidth Doesn’t Matter (Much)</p>
 						<img src="images/latencyVSbandwidth.png" />
+						<p><a href="https://goo.gl/C3LQN9">goo.gl/C3LQN9</a></p>
 					</section>
 
 				</section>
@@ -282,12 +289,6 @@
 						<h3>Baby homepage <br />(<span style="color: green;">77%</span> Improvement)</h3>
 						<video data-autoplay src="images/baby-slow.mp4" style="display: inline; width: 460px;" controls></video>
 						<video data-autoplay src="images/baby-fast.mp4" style="display: inline-block; width: 460px;" controls></video>
-					</section>
-
-					<section>
-						<h3>
-							<br /><a href="http://bit.do/tablica1">bit.do/tablica1</a>
-						</h3>
 					</section>
 
 				</section>
